# ensemble

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.githooks/: pre-commit
backend/: Dockerfile
backend/crates/api/: Cargo.toml
backend/crates/api/src/: main.rs  spotify_cache.rs
backend/crates/api/src/routes/: auth.rs  car.rs  me.rs  mod.rs  party.rs  session.rs  weave.rs
backend/crates/car/: Cargo.toml
backend/crates/car/src/: heartbeat.rs  lib.rs  session.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: car.rs  lib.rs  party.rs  spotify_cache.rs  users.rs  weave.rs
backend/crates/party/: Cargo.toml
backend/crates/party/src/: heartbeat.rs  lib.rs
backend/crates/playback/: Cargo.toml
backend/crates/playback/src/: lib.rs
backend/crates/spotify/: Cargo.toml
backend/crates/spotify/src/: auth.rs  lib.rs  player.rs  playlist.rs
backend/crates/weave/: Cargo.toml
backend/crates/weave/src/: heartbeat.rs  lib.rs  session.rs
frontend/: .env.example  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  buildInfo.d.ts  index.css
frontend/src/components/: QueueList.tsx  QueueTrackLabel.tsx  VersionFooter.css  VersionFooter.tsx
frontend/src/lib/: api.ts  party.ts  playback.ts  spotifyAuth.ts  weave.ts
frontend/src/pages/: AuthCallback.tsx  Home.module.css  Home.tsx
frontend/src/pages/car/: Session.tsx  Setup.tsx  Weave.module.css
frontend/src/pages/party/: Session.tsx  Setup.tsx
frontend/src/pages/weave/: Session.tsx  Setup.tsx
frontend/src/styles/: Mode.module.css
frontend/src/types/: index.ts
scripts/: deploy-backend.sh
supabase/migrations/: 0001_bootstrap.sql  0002_car_mode.sql  0003_car_queued_track.sql  0004_car_n_playlists.sql  0005_user_sessions.sql  0006_party_mode.sql  0007_party_queue_positions_not_unique.sql  0008_party_shared_queue_mode.sql  0009_weave_rename.sql  0010_party_playlist_adds.sql  0011_party_source_queue.sql  0012_party_queue_attribution_display.sql  0013_party_source_queue_disabled.sql  0014_party_played_tracks.sql  0015_party_voted_queue.sql  0016_byo_spotify_and_party_guests.sql  0017_party_playback_state.sql  0018_spotify_playlist_cache.sql  0019_weave_active_session_index.sql  0020_weave_playback_state.sql
